Improve ablation figure with multi-metric panels

--- a/NeurIPS模板/neurips_2025.tex
+++ b/NeurIPS模板/neurips_2025.tex
@@ -374,7 +374,7 @@ Fixed Tree (\(D_0=5,B=2\)) & 188.0\(\pm\)16.5 & 1.42\(\times\) & 0.0\% \\
 \begin{figure}[t]
   \centering
   \includegraphics[width=0.92\linewidth]{../figures/ablation_progression.pdf}
-  \caption{\textbf{Ablation progression on WikiText-2 (\(T=1500\)).} Adding Dynamic Breadth \& Depth increases throughput and reduces the number of verification iterations; History Adaptation further improves throughput and reduces iterations by committing longer prefixes per step.}
+  \caption{\textbf{Ablation progression on WikiText-2 (\(T=1500\)).} Beyond throughput and verification iterations, we report per-iteration progress (\(\bar{L}\), \(\bar{\ell}\)) and acceptance rate. Dynamic Breadth \& Depth improves throughput by committing longer prefixes per step, and History Adaptation further increases per-step progress and reduces the number of iterations.}
   \label{fig:ablation-progression}
 \end{figure}
 
