Align abstract/introduction claims with main results

--- a/NeurIPS模板/neurips_2025.tex
+++ b/NeurIPS模板/neurips_2025.tex
@@ -95,7 +95,7 @@
 
 
 \begin{abstract}
-Autoregressive decoding in large language models (LLMs) is fundamentally sequential and therefore underutilizes modern accelerator parallelism during token generation. Speculative decoding mitigates this bottleneck by letting a lightweight draft model propose multiple tokens that are verified in parallel by the target model; however, linear variants explore only a single draft chain per step and can waste substantial computation when early tokens are rejected, while existing tree-based approaches employ \emph{fixed} structures that cannot adapt to varying draft model confidence. We propose \textbf{DynaTree}, a tree-based speculative decoding framework with \emph{confidence-aware adaptive branching} that dynamically adjusts tree structure based on draft model uncertainty through adaptive per-node branching, dynamic depth control, and historical acceptance tuning, combined with probability-threshold pruning under an explicit node budget. Experiments on Pythia models demonstrate that DynaTree achieves 210.8~tokens/sec on WikiText-2 (1.61$\times$ speedup, 94.7\% acceptance rate), outperforming fixed tree structures by 16.3\% and consistently surpassing linear speculative decoding baselines across diverse datasets.
+Autoregressive decoding in large language models (LLMs) is fundamentally sequential and therefore underutilizes modern accelerator parallelism during token generation. Speculative decoding mitigates this bottleneck by letting a lightweight draft model propose multiple tokens that are verified in parallel by the target model; however, linear variants explore only a single draft chain per step and can waste substantial computation when early tokens are rejected, while existing tree-based approaches employ \emph{fixed} structures that cannot adapt to varying draft model confidence. We propose \textbf{DynaTree}, a tree-based speculative decoding framework with \emph{confidence-aware adaptive branching} that dynamically adjusts tree structure based on draft model uncertainty through adaptive per-node branching, dynamic depth control, and history-based adjustment, combined with probability-threshold pruning under an explicit node budget. Experiments on Pythia models show that DynaTree reaches 218.5~tokens/s on WikiText-2 (1.65$\times$ speedup) and improves throughput over a fixed-tree baseline by 16.2\%, while consistently outperforming linear speculative decoding across both WikiText-2 and PG-19.
 \end{abstract}
 
 
@@ -111,7 +111,7 @@ Tree-based speculation offers a natural remedy. When multiple plausible next tok
 
 While tree-based drafting addresses the single-path limitation of linear methods, existing approaches typically employ \emph{fixed} tree configurations with predetermined depth and branching factor~\cite{specinfer,medusa}. This rigid structure cannot adapt to the draft model's varying prediction confidence, creating an \emph{efficiency gap}: high-confidence predictions waste compute exploring unnecessary branches, while uncertain predictions suffer from insufficient exploration. Recent adaptive methods~\cite{cm_asd,adaeagle,cas_spec} adjust draft length or employ learned predictors, yet most focus on linear speculation rather than fundamentally restructuring the tree itself. We hypothesize that \emph{confidence-aware} tree construction---dynamically adjusting branching per node based on draft uncertainty---can bridge this gap while maintaining robust exploration.
 
-We present \textbf{DynaTree}, which addresses the efficiency gap through confidence-aware adaptive branching that dynamically adjusts tree structure based on draft model uncertainty. Our three-phase mechanism adapts per-node branching (1--3 branches), implements dynamic depth control via early stopping and deep expansion, and tunes parameters based on historical acceptance rates. Combined with probability-threshold pruning under an explicit node budget, DynaTree verifies candidate paths in a single forward pass using tree attention. Empirically, DynaTree achieves 210.8~tokens/sec on WikiText-2 (1.61$\times$ speedup, 94.7\% acceptance rate), outperforming fixed tree structures by 16.3\%.
+We present \textbf{DynaTree}, which addresses the efficiency gap through confidence-aware adaptive branching that dynamically adjusts tree structure based on draft model uncertainty. Our three-phase mechanism adapts per-node branching (1--3 branches), implements dynamic depth control via early stopping and deep expansion, and tunes parameters based on recent verification outcomes. Combined with probability-threshold pruning under an explicit node budget, DynaTree verifies candidate paths in a single forward pass using tree attention. Empirically, DynaTree achieves 218.5~tokens/s on WikiText-2 (1.65$\times$ speedup), outperforming a fixed-tree baseline by 16.2\%.
 
 In summary, our contributions are:
 \begin{itemize}
@@ -119,7 +119,7 @@ In summary, our contributions are:
   
   \item We introduce a three-phase adaptive mechanism combining confidence-based branching, dynamic depth control, and historical parameter tuning. Our ablation study reveals that dynamic depth contributes most to performance gains.
   
-  \item Experiments demonstrate that DynaTree achieves 1.61$\times$ speedup with 94.7\% acceptance rate, outperforming fixed tree baselines by 16.3\% across WikiText-2 and PG-19.
+  \item Experiments demonstrate that DynaTree improves throughput over autoregressive decoding, linear speculative decoding, and a fixed-tree baseline across WikiText-2 and PG-19, with a 1.65$\times$ speedup on WikiText-2 at \(T=1500\).
 \end{itemize}
 
 \begin{figure}[t]
@@ -139,7 +139,7 @@ Speculative decoding accelerates autoregressive generation by decoupling \emph{p
 
 To overcome single-path inefficiency, tree-based methods draft multiple candidate continuations and verify them in one target-model forward pass using structured attention masks~\cite{specinfer,opt_tree,medusa,traversal_verification}. SpecInfer~\cite{specinfer} pioneered token tree verification with expansion-based and merge-based construction mechanisms. OPT-Tree~\cite{opt_tree} algorithmically searches for tree structures that maximize expected acceptance length, while Medusa~\cite{medusa} augments models with multiple decoding heads to eliminate separate draft models. However, these methods predominantly use \emph{fixed} tree configurations with static depth $D$ and branching factor $B$, creating an efficiency gap when draft confidence varies~\cite{specinfer,medusa}.
 
-Recent adaptive approaches address this rigidity through dynamic parameter adjustment. CM-ASD~\cite{cm_asd} modulates drafting length and verification thresholds based on entropy, logit margin, and softmax margin, achieving 4--5$\times$ speedups. AdaEAGLE~\cite{adaeagle} employs a lightweight MLP to predict optimal draft length per iteration. CAS-Spec~\cite{cas_spec} introduces dynamic tree cascades with acceptance rate heuristics, improving throughput by 47\%. While promising, these methods focus on linear speculation or require learned predictors. In contrast, DynaTree directly restructures trees via confidence-aware branching, dynamic depth control, and historical adjustment—achieving 16.3\% gains over fixed configurations while remaining training-free.
+Recent adaptive approaches address this rigidity through dynamic parameter adjustment. CM-ASD~\cite{cm_asd} modulates drafting length and verification thresholds based on entropy, logit margin, and softmax margin, achieving 4--5$\times$ speedups. AdaEAGLE~\cite{adaeagle} employs a lightweight MLP to predict optimal draft length per iteration. CAS-Spec~\cite{cas_spec} introduces dynamic tree cascades with acceptance rate heuristics, improving throughput by 47\%. While promising, these methods focus on linear speculation or require learned predictors. In contrast, DynaTree directly restructures trees via confidence-aware branching, dynamic depth control, and history-based adjustment, yielding a 16.2\% throughput gain over a fixed-tree baseline in our setup while remaining training-free.
 
 \subsection{Dynamic Pruning Strategies}
 
